# twitch-log-client

./: .gitignore  README.md  chat_logs.db  pyproject.toml  requirements.txt  tlc.py
scripts/: add_example_data.py  extract_non_matching_messages.py
scripts/python/: add_example_data.py
templates/: index.html
tests/: test_poll.py
tlc/: __init__.py  poll.py  tlc.py
tlc_migrations/: 0001_initial.py  0002_rename_message_chatmessage_message_text_and_more.py  0003_alter_chatmessage_username.py  0004_alter_chatmessage_message_text.py
web/backend/: main.py  pyproject.toml  requirements.txt
